<resources>
    <string name="app_name">TMDb</string>
    <string name="search_for_movie">Search for Movie</string>
    <string name="search_results">Search Results</string>
    <string name="movie_to_search_for">Movie to search for</string>
    <string name="back">Back</string>

    <string name="api_key">27fc45ada92ace137689b2c3ddb1c6d0</string>
    <string name="image_URL">https://image.tmdb.org/t/p/w500/</string>
    <string name="search_URL">https://api.themoviedb.org/3/search/movie?api_key=</string>
    <string name="lang_ENG_URL">&amp;language=en-US</string>
    <string name="non_adult_URL">&amp;include_adult=false</string>
    <string name="query_URL">&amp;query=</string>

    <string name="latest_movie_URL">https://api.themoviedb.org/3/movie/latest?api_key=</string>
    <string name="base_db_URL">https://api.themoviedb.org/3/movie/</string>
    <string name="guest_session_URL">https://api.themoviedb.org/3/authentication/guest_session/new?api_key=</string>
    <string name="movie_detail_json_ERR">MovieDetailsJSONFAIL</string>
    <string name="movie_detail_parse_ERR">MovieDetailsPARSEFAIL</string>
    <string name="log_search_conn_ERR">SearchMoviesCONNERR</string>
    <string name="shared_pref_json_ERR">SharedPrefJSONFAIL</string>
    <string name="GSID_response_json_ERR">GSIDResponseJSONFAIL</string>
    <string name="GSID_response_conn_ERR">GSIDResponseCONNERR</string>
    <string name="latest_movie_conn_ERR">LatestMovieCONNERR</string>
    <string name="random_movie_json_ERR">RandomMovieJSONFAIL</string>
    <string name="random_movie_conn_ERR">RandomMovieCONNERR</string>
    <string name="random_movie_SUCCESS">RandomMovieSUCCESS</string>

    <string name="HTTP_whitespace">%20</string>
    <string name="version">TMDb App v0.2</string>
    <string name="random_poster_cd">Random Movie Poster</string>
    <string name="default_title">[Title]</string>
    <string name="default_description">[Description]</string>
    <string name="about_btn">About</string>
    <string name="search_btn">Search Movies</string>
    <string name="favorites_btn">Favorite Movies</string>
    <string name="upcoming_btn">Upcoming Movies</string>
    <string name="get_random_btn">Get Random Movie</string>
    <string name="tmdb_logo">The Movie Database Logo</string>
    <string name="add_to_favourites">Add to Favourites</string>

</resources>
