<?xml version="1.0" encoding="utf-8"?>
<!--
 FILENAME:
 PROJECT:  PROG3150_MAD - Assignment #1
 BY: Kieron Higgs
 DATE: 01-24-2019
 DESCRIPTION:
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SearchMovies"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Activities.SearchMovies"

    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="225dp"
            android:layout_marginRight="225dp"
            android:layout_marginBottom="13dp"
            android:enabled="false"
            android:text="@string/search_for_movie"
            app:layout_constraintBottom_toTopOf="@+id/txtSearchResults"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSearch" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="449dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/search_results"
            android:scrollbars="vertical"
            android:text="@string/search_results"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/movie_to_search_for"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="61dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="318dp"
            android:layout_marginRight="318dp"
            android:layout_marginBottom="28dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>